--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lalitha Kishore J</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Data Analyst, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Web Designer, Web Developer, Data Analyst, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
