--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar1" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">CSS <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar2" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar3" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -221,7 +221,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">CMS <i class="val">50%</i></span>
+              <span class="skill">CMS <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -259,7 +259,7 @@
 
         <div class="row">
           <div class="col-12" data-aos="fade-up">
-            <img class="w-100" src="https://res.cloudinary.com/dlt3i0ddc/image/upload/v1714996590/Resume_FINAL_2024__page-0001_eoutos.jpg">
+            <a href="https://drive.google.com/file/d/1oqrgOoEySd-hqSuioJaVQzvHL4Zipawx/view?usp=sharing"><img class="w-100" src="https://res.cloudinary.com/dlt3i0ddc/image/upload/v1714996590/Resume_FINAL_2024__page-0001_eoutos.jpg"></a>
             <!--<h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Alex Smith</h4>
