--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         <div class="row" data-aos="fade-in">
 
           <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
+            <div class="info" style="display:flex; flex-wrap: wrap;">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
