--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="https://res.cloudinary.com/dlt3i0ddc/image/upload/v1715000747/WhatsApp_Image_2024-03-09_at_08.52.36_40d40bf5_ocsout.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="https://im.ge/i/me.KjxPJK"><img src="https://i.im.ge/2024/06/03/KjxPJK.me.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Lalitha Kishore J</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Kishorebiotech" class="twitter"><i class="bx bxl-twitter"></i></a>
